...
    <string name="cardAttribute_write_dg19">Aufenthaltstitel I (Schreibrechte)</string>
    <string name="cardAttribute_write_dg20">Aufenthaltstitel II (Schreibrechte)</string>
    <string name="firstTimeUser_confirmEnd_confirm">Beenden</string>
    <string name="firstTimeUser_confirmEnd_deny">Abbrechen</string>
    <string name="firstTimeUser_confirmEnd_message">Möchten Sie die Einrichtung der Online‑Ausweisfunktion abbrechen\?
\n
\nSie können die Einrichtung später erneut starten.</string>
    <string name="firstTimeUser_confirmEnd_title">Einrichtung beenden?</string>
    <string name="firstTimeUser_done_close">Einrichtung abschließen</string>
    <string name="firstTimeUser_done_identify">Jetzt ausweisen</string>
    <string name="firstTimeUser_done_title">Sie haben Ihren Online‑Ausweis erfolgreich eingerichtet.</string>
    <string name="firstTimeUser_incorrectTransportPIN_body">Geben Sie Ihre 5‑stellige Transport‑PIN aus dem PIN‑Brief ein.</string>
    <string name="firstTimeUser_incorrectTransportPIN_noAttemptLeft">Sie haben keine Versuche mehr.</string>
    <string name="firstTimeUser_incorrectTransportPIN_textFieldLabel">Eingabefeld Transport-PIN, fünfstellig</string>
    <string name="firstTimeUser_incorrectTransportPIN_title">Inkorrekte Transport-PIN eingegeben.</string>
    <string name="firstTimeUser_intro_body">Sie müssen Ihren Ausweis insgesamt nur einmal einrichten. Falls Sie schon über eine 6‑stellige PIN verfügen, ist Ihr Ausweis bereits eingerichtet.</string>
    <string name="firstTimeUser_intro_box">**Hinweis:** Falls Sie schon über eine persönliche 6‑stellige PIN verfügen, ist Ihr Ausweis bereits eingerichtet.</string>
...
    <string name="firstTimeUser_personalPIN_confirmation">PIN zum Bestätigen wiederholen</string>
    <string name="firstTimeUser_personalPIN_error_mismatch_body">Versuchen Sie es erneut.</string>
    <string name="firstTimeUser_personalPIN_error_mismatch_title">PINs stimmen nicht überein</string>
    <string name="firstTimeUser_personalPIN_textFieldLabel_first">Eingabefeld Persönliche PIN, sechsstellig</string>
    <string name="firstTimeUser_personalPIN_textFieldLabel_second">Eingabefeld Persönliche PIN bestätigen, sechsstellig</string>
...
    <string name="firstTimeUser_personalPINIntro_title">Vergeben Sie nun Ihre persönliche Ausweis‑PIN.</string>
    <string name="firstTimeUser_personalPIN_confirmation_body">Nutzen Sie nicht Ihr Geburtsdatum als Ihre PIN. Vergeben Sie eine PIN, die nicht leicht zu erraten ist.</string>
    <string name="firstTimeUser_personalPIN_confirmation_title">Bestätigen Sie Ihre persönliche Ausweis‑PIN.</string>
    <string name="firstTimeUser_pinLetter_body">Den PIN‑Brief haben Sie nach der Beantragung des Ausweises per Post erhalten.</string>
    <string name="firstTimeUser_pinLetter_requestLetter">Nein, PIN-Rücksetzbrief bestellen</string>
...
    <string name="firstTimeUser_scan_error_title_id_deactivated">Online-Ausweisfunktion deaktiviert</string>
    <string name="firstTimeUser_scan_error_title_pin_blocked">PIN blockiert</string>
    <string name="firstTimeUser_scan_error_title_pin_suspended">PIN suspendiert</string>
    <string name="firstTimeUser_scan_title_android">Berühren Sie Ihren Ausweis mit der Rückseite des Smartphones.</string>
    <string name="firstTimeUser_transportPIN_body">Die 5‑stellige Transport‑PIN finden Sie in Ihrem PIN‑Brief.</string>
...
    <string name="firstTimeUser_alreadySetupConfirmation_close">Verstanden</string>
    <string name="firstTimeUser_alreadySetupConfirmation_title">Sie sind startklar!</string>
    <string name="helpNFC_body">NFC steht für Near Field Communication. Die Technik ermöglicht den kontaktlosen Austausch von Daten über sehr kurze Strecken. Sie wird bspw. auch beim Bezahlen mit dem Smartphone an der Supermarktkasse verwendet.</string>
    <string name="helpNFC_title">So funktioniert die NFC‑Technologie</string>
    <string name="home_header_infoText">Öffnen Sie die Internetseite von  »Grundsteuererklärung für Privateigentum«. Um die Identifizierung zu starten, tippen Sie dort auf:</string>
...
    <string name="identification_fetchMetadata_pleaseWait">Laden</string>
    <string name="identification_fetchMetadataError_body">Bitte versuchen Sie es erneut. Stellen Sie dabei sicher, dass Sie mit dem Internet verbunden sind.</string>
    <string name="identification_fetchMetadataError_retry">Erneut versuchen</string>
    <string name="identification_fetchMetadataError_title">Es ist ein Fehler aufgetreten.</string>
    <string name="identification_personalPIN_error_incorrectPIN">Inkorrekte persönliche PIN</string>
...
    <string name="licenseDialog_confirm">OK</string>
    <string name="navigation_back">Zurück</string>
    <string name="navigation_cancel">Abbrechen</string>
    <string name="ndcDeactivated_openSettings_button">Einstellungen anpassen</string>
    <string name="nfcDeactivated_info_body">»BundesIdent« hat aktuell keine Berechtigung die NFC‑Funktion zu nutzen.
...
\n[www.bfdi.bund.de/DE/Service/Beschwerden/beschwerden_node.html ↗](https://www.bfdi.bund.de/DE/Service/Beschwerden/beschwerden_node.html)</string>
    <string name="scan_animationAccessibilityLabel">Legen Sie Ihren Ausweis auf eine gerade Oberfläche, um Bewegungen bei dem Scanvorgang zu vermeiden. Legen Sie anschließend Ihr Smartphone auf den Ausweis. Die obere Rückseite des Smartphones sollte direkt auf dem Ausweis liegen. Warten Sie einen Moment, bis der Scanvorgang abgeschlossen wurde.</string>
    <string name="scan_helpNFC">So funktioniert die NFC-Technologie</string>
    <string name="scan_helpScanning">Mein Ausweis wird nicht erkannt</string>
    <string name="scanError_box_title">Ausweisprozess erneut starten</string>
    <string name="scanError_box_body">Aufgrund eines Fehlers müssen Sie den Ausweisprozess erneut starten.</string>
...
\n
\n- Stellen Sie sicher, dass Sie mit dem Internet verbunden sind.</string>
    <string name="scanError_cardUnreadable_title">Ihr Ausweis wurde nicht erkannt.</string>
    <string name="scanError_close">Schließen</string>
    <string name="scanError_redirect">Zurück zum Diensteanbieter</string>
    <string name="scanError_unknown_body">Ein unbekannter Fehler ist aufgetreten.</string>
...
    <string name="pinEntryField_accessibility_cursorPosition">Cursor an der Position %1$d.</string>
    <string name="identification_confirmEnd_message">Möchten Sie das Ausweisen beenden?</string>
    <string name="identification_confirmEnd_title">Ausweisen beenden?</string>
    <string name="identification_confirmEnd_confirm">Beenden</string>
    <string name="identification_confirmEnd_deny">Abbrechen</string>
    <string name="identification_can_pinForgotten_title">Haben Sie Ihre persönliche Ausweis-PIN vielleicht vergessen?</string>
...
