...
                CircularProgressIndicator(
                    color = UseIdTheme.colors.blue800,
                    strokeWidth = 10.dp,
                    modifier = Modifier
                        .align(Alignment.Center)
                        .size(70.dp)
                        .testTag("ProgressIndicator")
                )
            }
            Column(
                verticalArrangement = Arrangement.Center,
                horizontalAlignment = Alignment.CenterHorizontally,
                modifier = Modifier.weight(.5f)
...
